fix: align quote author with text width

--- a/style.css
+++ b/style.css
@@ -148,7 +148,9 @@ button {
 .author {
     font-size: 24px;
     color: #1F2937;
-    align-self: flex-end;
+    max-width: 850px;
+    text-align: right;
+    width: 100%;
 }
 
 .cta .container {
